queryFeatureLibrary过滤逻辑